@@ -1,3 +1,9 @@
+2011-01-23  Pekka Enberg <penberg@kernel.org>
+
+	* java/io/PrintStream.java
+	(PrintStream): Throw NullPointerException if out or encoding
+	is null to be compatible with OpenJDK.
+
 2011-01-22  Pekka Enberg  <penberg@kernel.org>
 
 	* native/jni/java-lang/java_lang_VMSystem.c
